<resources>
    <string name="app_name">InstaFire</string>
    <string name="tv_login_email">email</string>
    <string name="tv_login_password">password</string>
    <string name="bt_login">LOGIN</string>
    <string name="post_picture_content_description">post picture</string>
    <string name="add_a_post">Add a post !</string>
    <string name="btn_add_an_image">Add an Image</string>
    <string name="btn_publish">Publish</string>
    <string name="et_description">description</string>
</resources>